--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<input type="file" accept="image/*" />
+		<input type="file" accept="image/*" capture="camera"/>
 
 	</body>
 	<script src="js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
